<resources>
    <string name="app_name">CookAid</string>
    <string name="logoName">COOKAID</string>
    <string name="logoContentDescription">logo</string>
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="minimum_password">Password to short, enter a minimum of 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot your password?</string>
    <string name="forgot_password_msg">We just need your registered email to send you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back" />
    <string name="facebook_app_id">267406873979496</string>
    <string name="fb_login_protocol_scheme">fb267406873979496</string>
    <string name="server_client_id">406475612189-24th9jund273coje5ec89ujrv14ce9u3.apps.googleusercontent.com</string>
    <string name="hint_recipe_name">Enter a recipe name</string>
    <string name="hint_recipe">Fill in your recipe</string>
    <string name="hello_world">Hello</string>
    <string name="hint_category_name">Enter a category</string>
    <string name="hint_level_name">Enter a level</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_sign_up_here">No account? sign up here.</string>
    <string name="no_recipes_available">No recipes available at the moment!</string>
    <string-array name="recipe_levels">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Novice</item>
        <item>Expert</item>
    </string-array>
    <string name="title_recipe_list">Recipes</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
</resources>
